# manager_agent_gym

./: .env.example  pyproject.toml
examples/: cli.py  common_stakeholders.py  run_examples.py
examples/end_to_end_examples/enterprise_saas_negotiation_pipeline/: team.py
examples/end_to_end_examples/genai_feature_launch/: team.py
examples/end_to_end_examples/icap/: team.py
examples/end_to_end_examples/ipo_readiness_program/: team.py
examples/end_to_end_examples/legal_global_data_breach/: team.py
examples/end_to_end_examples/legal_litigation_ediscovery/: team.py
examples/end_to_end_examples/legal_m_and_a/: team.py
examples/end_to_end_examples/marketing_campaign/: team.py
examples/end_to_end_examples/mnc_workforce_restructuring/: team.py
examples/end_to_end_examples/orsa/: team.py
examples/end_to_end_examples/pharmaceutical_product_launch/: team.py
examples/getting_started/: basic_agent_communication.py  hello_manager_agent.py
experiments/calc_reroute/: .gitignore  SPEC.md  linchpin.py  scenario.py  tools.py
experiments/competence_probe/: probe.py
experiments/ds_reroute/: ENVIRONMENT.md  analyze.py  audit_arm2.py  fixed_gate.py  judgment_protocol.py  linchpin.py  natural_choice_probe.py  observability.py  perturbations.py  run.py  scenario.py  shadow_probe.py  viewer.py  viewer_data.py
experiments/m1_derisk/: README.md  prompts.py  run.py  score_artifacts.py
experiments/micro_reroute/: .gitignore  run.py  scenario.py  score.py
manager_agent_gym/: config.py
tests/: test_ai_agent_output.py  test_ds_reroute_judgments.py  test_ds_reroute_scenario.py  test_ds_reroute_viewer.py  test_engine_outputs.py  test_llm_interface.py  test_manager_actions.py  test_model_provider.py  test_observation_aids.py  test_observation_policy.py  test_perturbations.py  test_run_trace.py  test_structured_manager_context.py
tests/integration/: test_engine_retry_task.py
(+57 files in other folders)
